--- a/JOB_SEEKING_WEBSITE/frontend/package.json
+++ b/JOB_SEEKING_WEBSITE/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://anjanasingh2003.github.io/JOB_SEEKING_SYSTEM",
   "private": true,
   "version": "0.0.0",
   "type": "module",
